# gridpilot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh  vercel.json
backend/: __init__.py
backend/app/: __init__.py  auth.py  billing.py  config.py  db.py  db_models.py  deps.py  main.py  models.py  schemas.py  seed.py  serializers.py
backend/app/routers/: audits.py  auth.py  caiso.py  dashboard.py  demo.py  projects.py
backend/app/rules/: caiso.yaml  ercot.yaml  iso-ne.yaml  miso.yaml  nyiso.yaml  pjm.yaml  spp.yaml
backend/app/rules/iso_requirements/: README.md  nyiso.md  spp.md
backend/app/services/: __init__.py  audit.py  blob_store.py  caiso_extract_ai.py  caiso_packet.py  durable.py  grok_client.py  iso_profiles.py  jobs.py  packet_preview.py  pdf_extract.py  report.py  rules_engine.py
backend/app/static/: app.html  landing.html
backend/app/static/css/: theme.css
backend/app/static/js/: api.js  app.js  hero-bg.js  theme-config.js  ui.js
backend/app/static/requirements/: ercot.md  isone.md
docs/: CNAME  index.html
docs/assets/css/: theme.css
docs/assets/requirements/: caiso.md  miso.md  pjm.md
samples/: generate_sample_sld.py
scripts/: button_sweep_test.mjs  drawer_test.mjs  extract_flow_test.mjs  iso_flow_test.mjs  modal_cancel_test.mjs  preview_screenshots.mjs  real_flow_test.mjs  trajectory_test.mjs  ui_smoke_test.mjs  upload_test.mjs
