[project]
name = "gridpilot"
version = "0.2.0"
description = "Interconnection readiness platform for utility-scale renewables"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "python-multipart>=0.0.12",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.0",
  "pydantic[email]>=2.6.0",
  "email-validator>=2.1.0",
  "pyyaml>=6.0.2",
  "pymupdf>=1.24.0",
  "pillow>=10.4.0",
  "jinja2>=3.1.4",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.36",
  "bcrypt>=4.2.0",
  "itsdangerous>=2.2.0",
  "eval_type_backport>=0.2.0",
  "openpyxl>=3.1.0",
]

[tool.vercel]
entrypoint = "main:app"
